--- a/src/SourceGit/Views/CommitBaseInfo.axaml
+++ b/src/SourceGit/Views/CommitBaseInfo.axaml
@@ -18,10 +18,13 @@
           <StackPanel Grid.Column="1" Margin="16,0,8,0" Orientation="Vertical">
             <TextBlock Classes="group_header_label" Margin="0" Text="{DynamicResource Text.CommitDetail.Info.Author}"/>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,8">
-              <SelectableTextBlock Text="{Binding Author.Name}" FontSize="12" Margin="2,0,8,0"/>
-              <SelectableTextBlock Text="{Binding Author.Email}" FontSize="12" Foreground="{DynamicResource Brush.FG2}"/>
+              <SelectableTextBlock Text="{Binding Author.Name}" Margin="2,0,8,0"/>
+              <SelectableTextBlock Text="{Binding Author.Email}" Foreground="{DynamicResource Brush.FG2}"/>
             </StackPanel>
-            <SelectableTextBlock Text="{Binding AuthorTimeStr}" Margin="2,0,0,0" FontSize="11" Foreground="{DynamicResource Brush.FG2}"/>
+            <SelectableTextBlock Text="{Binding AuthorTimeStr}" 
+                                 Margin="2,0,0,0"
+                                 FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=DefaultFontSize, Converter={x:Static c:FontSizeModifyConverters.Decrease}}" 
+                                 Foreground="{DynamicResource Brush.FG2}"/>
           </StackPanel>
 
           <!-- Committer -->
@@ -29,10 +32,13 @@
           <StackPanel Grid.Column="3" Margin="16,0,8,0" Orientation="Vertical" IsVisible="{Binding IsCommitterVisible}">
             <TextBlock Classes="group_header_label" Margin="0" Text="{DynamicResource Text.CommitDetail.Info.Committer}"/>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,8">
-              <SelectableTextBlock Text="{Binding Committer.Name}" FontSize="12" Margin="2,0,8,0"/>
-              <SelectableTextBlock Text="{Binding Committer.Email}" FontSize="12" Foreground="{DynamicResource Brush.FG2}"/>
+              <SelectableTextBlock Text="{Binding Committer.Name}" Margin="2,0,8,0"/>
+              <SelectableTextBlock Text="{Binding Committer.Email}" Foreground="{DynamicResource Brush.FG2}"/>
             </StackPanel>
-            <SelectableTextBlock Text="{Binding CommitterTimeStr}" Margin="2,0,0,0" FontSize="11" Foreground="{DynamicResource Brush.FG2}"/>
+            <SelectableTextBlock Text="{Binding CommitterTimeStr}" 
+                                 Margin="2,0,0,0" 
+                                 FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=DefaultFontSize, Converter={x:Static c:FontSizeModifyConverters.Decrease}}"
+                                 Foreground="{DynamicResource Brush.FG2}"/>
           </StackPanel>
         </Grid>
 
@@ -43,7 +49,7 @@
         <Grid RowDefinitions="24,Auto,Auto,Auto" ColumnDefinitions="96,*">
           <!-- SHA -->
           <TextBlock Grid.Row="0" Grid.Column="0" Classes="info_label" Text="{DynamicResource Text.CommitDetail.Info.SHA}" />
-          <SelectableTextBlock Grid.Row="0" Grid.Column="1" Text="{Binding SHA}" Margin="12,0,0,0" FontSize="12" VerticalAlignment="Center" FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}"/>
+          <SelectableTextBlock Grid.Row="0" Grid.Column="1" Text="{Binding SHA}" Margin="12,0,0,0" VerticalAlignment="Center" FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}"/>
 
           <!-- PARENTS -->
           <TextBlock Grid.Row="1" Grid.Column="0" Classes="info_label" Text="{DynamicResource Text.CommitDetail.Info.Parents}" IsVisible="{Binding Parents.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}"/>
@@ -58,7 +64,6 @@
               <DataTemplate>
                 <TextBlock Classes="monospace"
                            Text="{Binding Converter={x:Static c:StringConverters.ToShortSHA}}"
-                           FontSize="12"
                            Foreground="DarkOrange"
                            TextDecorations="Underline"
                            Margin="0,0,16,0"
@@ -95,7 +100,7 @@
           <!-- Messages -->
           <TextBlock Grid.Row="3" Grid.Column="0" Classes="info_label" Text="{DynamicResource Text.CommitDetail.Info.Message}" VerticalAlignment="Top" Margin="0,4,0,0" />
           <ScrollViewer Grid.Row="3" Grid.Column="1" Margin="12,5,0,0" MaxHeight="100" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-            <SelectableTextBlock Text="{Binding FullMessage}" FontSize="12" FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}" TextWrapping="Wrap"/>
+            <SelectableTextBlock Text="{Binding FullMessage}" FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}" TextWrapping="Wrap"/>
           </ScrollViewer>
         </Grid>
 
