--- a/src/SourceGit/Views/CommitChanges.axaml
+++ b/src/SourceGit/Views/CommitChanges.axaml
@@ -19,7 +19,6 @@
       <!-- Search & Display Mode -->
       <Grid Grid.Row="0" ColumnDefinitions="*,24">
         <TextBox Grid.Column="0"
-                 FontSize="12"
                  Height="26"
                  BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}" 
                  Background="Transparent"
@@ -75,7 +74,7 @@
               <DataGridTemplateColumn Width="*" Header="PATH">
                 <DataGridTemplateColumn.CellTemplate>
                   <DataTemplate>
-                    <TextBlock Classes="monospace" Text="{Binding Path}" Margin="4,0,0,0" FontSize="12"/>
+                    <TextBlock Classes="monospace" Text="{Binding Path}" Margin="4,0,0,0"/>
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
               </DataGridTemplateColumn>
@@ -110,7 +109,7 @@
               <DataGridTemplateColumn Header="FILE_NAME">
                 <DataGridTemplateColumn.CellTemplate>
                   <DataTemplate>
-                    <TextBlock Classes="monospace" Text="{Binding Path, Converter={x:Static c:PathConverters.PureFileName}}" Margin="4,0,0,0" FontSize="12"/>
+                    <TextBlock Classes="monospace" Text="{Binding Path, Converter={x:Static c:PathConverters.PureFileName}}" Margin="4,0,0,0"/>
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
               </DataGridTemplateColumn>
@@ -118,7 +117,7 @@
               <DataGridTemplateColumn Header="FOLDER_PATH">
                 <DataGridTemplateColumn.CellTemplate>
                   <DataTemplate>
-                    <TextBlock Classes="monospace" Text="{Binding Path, Converter={x:Static c:PathConverters.PureDirectoryName}}" Margin="4,0,0,0" FontSize="12" Foreground="{DynamicResource Brush.FG2}"/>
+                    <TextBlock Classes="monospace" Text="{Binding Path, Converter={x:Static c:PathConverters.PureDirectoryName}}" Margin="4,0,0,0" Foreground="{DynamicResource Brush.FG2}"/>
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
               </DataGridTemplateColumn>
@@ -143,7 +142,7 @@
                 <Grid Height="24" ColumnDefinitions="Auto,*">
                   <Path Grid.Column="0" Classes="folder_icon" Width="14" Height="14" Margin="0,2,0,0" IsVisible="{Binding IsFolder}" Fill="Goldenrod" VerticalAlignment="Center"/>
                   <v:ChangeStatusIcon Grid.Column="0" Width="14" Height="14" IsWorkingCopyChange="False" Change="{Binding Backend}" IsVisible="{Binding !IsFolder}"/>
-                  <TextBlock Grid.Column="1" Classes="monospace" Text="{Binding FullPath, Converter={x:Static c:PathConverters.PureFileName}}" FontSize="12" Margin="6,0,0,0"/>
+                  <TextBlock Grid.Column="1" Classes="monospace" Text="{Binding FullPath, Converter={x:Static c:PathConverters.PureFileName}}" Margin="6,0,0,0"/>
                 </Grid>
               </TreeDataTemplate>
             </TreeView.ItemTemplate>
