--- a/src/SourceGit/Views/Welcome.axaml
+++ b/src/SourceGit/Views/Welcome.axaml
@@ -147,7 +147,7 @@
                Classes="italic"
                Margin="0,0,8,0"
                HorizontalAlignment="Center" VerticalAlignment="Center"
-               FontSize="12"
+               FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=DefaultFontSize, Converter={x:Static c:FontSizeModifyConverters.Decrease}}"
                Text="{DynamicResource Text.Welcome.DragDropTip}"
                Foreground="{DynamicResource Brush.FG2}"/>
   </Grid>
