style: use fixed tab title font size; NumericUpDown border

--- a/src/SourceGit/Views/Launcher.axaml
+++ b/src/SourceGit/Views/Launcher.axaml
@@ -173,6 +173,7 @@
                             IsHitTestVisible="False"/>
                       <TextBlock Grid.Column="1"
                                  Classes="monospace"
+                                 FontSize="12"
                                  HorizontalAlignment="Stretch" VerticalAlignment="Center"
                                  TextAlignment="Center"
                                  Text="{Binding Node.Name}"
@@ -180,6 +181,7 @@
                                  IsHitTestVisible="False"/>
                       <TextBlock Grid.Column="1"
                                  Classes="monospace"
+                                 FontSize="12"
                                  HorizontalAlignment="Stretch" VerticalAlignment="Center"
                                  TextAlignment="Center"
                                  Text="{DynamicResource Text.PageTabBar.Welcome.Title}"
