--- a/src/SourceGit/Views/Histories.axaml
+++ b/src/SourceGit/Views/Histories.axaml
@@ -47,7 +47,11 @@
                           <Border Height="16" Margin="0,0,4,0" CornerRadius="2" ClipToBounds="True">
                             <StackPanel Orientation="Horizontal">
                               <Border Background="{DynamicResource Brush.Decorator}" Width="16">
-                                <Path Width="8" Height="8" Stretch="Fill" Data="{Binding Type, Converter={x:Static c:DecoratorTypeConverters.ToIcon}}" Fill="{DynamicResource Brush.DecoratorIcon}"/>
+                                <Path Width="8" Height="8" 
+                                      Stretch="Uniform" 
+                                      Data="{Binding Type, Converter={x:Static c:DecoratorTypeConverters.ToIcon}}" 
+                                      Fill="{DynamicResource Brush.DecoratorIcon}"
+                                      VerticalAlignment="Center"/>
                               </Border>
                               <Border Background="{Binding Type, Converter={x:Static c:DecoratorTypeConverters.ToBackground}}">
                                 <TextBlock Classes="monospace" Text="{Binding Name}" FontSize="10" Margin="4,0" Foreground="Black"/>
